--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,7 +2,7 @@ html
     position: relative
     height: 100%
 
-    #header
+    .header
         background-color: #F8F8F8
         height: 10%
         width: 100%
@@ -14,7 +14,7 @@ html
             height: 100%
             width: 100%
 
-            #toplogo
+            .toplogo
                 height: 45px
 
             .hrig
@@ -28,4 +28,11 @@ html
                     text-decoration: none   
                 .hrigi
                     padding: 3.5%
+
+    .top
+        background-image: url('../images/bg2.jpg')
+        height: 100%
+        background-size: cover
+        padding: 5
+        color: white
                     
