--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,6 +16,7 @@ html
 
             .toplogo
                 height: 45px
+                background-image: url('../images/logo.png')
 
             .hrig
                 align-self: center
