--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,7 +1,8 @@
 html
     position: relative
     height: 100%
-
+    margin: 0
+    
     .header
         background-color: #F8F8F8
         height: 10%
@@ -33,6 +34,10 @@ html
         background-image: url('../images/bg2.jpg')
         height: 100%
         background-size: cover
-        padding: 5
         color: white
+        padding: 10%
+
+        h1 
+            font-family: 'BebasNeueLight'
+            font-size: 72px
                     
