--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,8 +1,7 @@
 html
     position: relative
     height: 100%
-    margin: 0
-    
+    margin: 0 
     .header
         background-color: #F8F8F8
         height: 10%
@@ -10,18 +9,14 @@ html
         margin: 0
         font-family: 'Ubuntu Condensed', sans-serif
         font-size: 18px
-
         .container1
             height: 100%
             width: 100%
-
             .toplogo
                 height: 45px
-
             .hrig
                 align-self: center
                 padding-left: 10%
-
                 a:visited
                     color: #494f90
                 a:hover
@@ -29,15 +24,13 @@ html
                     text-decoration: none   
                 .hrigi
                     padding: 3.5%
-
     .top
         background-image: url('../images/bg2.jpg')
         height: 100%
         background-size: cover
         color: white
-        padding: 10%
-
-        h1 
+        padding: 5%
+        p 
             font-family: 'BebasNeueLight'
             font-size: 72px
                     
