--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,6 +4,11 @@ html
     position: relative
     height: 100%
     margin: 0
+
+    hr
+        margin: 0
+        background-color: #E0DEDE
+
     .header
         background-color: $bgcinzaclaro
         height: 10%
@@ -62,7 +67,66 @@ html
                     margin-right: 2%
                     margin-top: 2%
 
-                    
+    .about1, .about3
+        height: 100%
+        color: black
+        padding-top: 4%
+        padding-bottom: 5%
+        margin: 0
+        background-color: #EAE8E8
+
+        .thinlinesmall
+            background-color: #CCC9C9
+            height: 6px
+            width: 15%
+            margin-bottom: 5%
+
+        h1
+            font-size: 30px
+            font-family: 'Ubuntu Condensed', sans-serif
+            margin-bottom: 5%
+
+        p 
+            width: 65%
+            font-family: 'Ubuntu Condensed', sans-serif
+            font-size: 18px
+
+        img 
+            width: 100%
+            height: 100%
+
+        #asianbaby
+            width: 60%
+            height: 100%
+
+    .about2
+        height: 100%
+        color: black
+        padding-top: 4%
+        padding-bottom: 5%
+        margin: 0
+        background-color: $bgcinzaclaro
+
+        .thinlinesmall
+            background-color: #CCC9C9
+            height: 6px
+            width: 15%
+            margin-bottom: 5%
+
+        h1
+            font-size: 30px
+            font-family: 'Ubuntu Condensed', sans-serif
+            margin-bottom: 5%
+
+        p 
+            width: 100%
+            font-family: 'Ubuntu Condensed', sans-serif
+            font-size: 18px
+
+        img 
+            width: 50%
+            height: 80%
+
    
             
             
