--- a/sass/style.sass
+++ b/sass/style.sass
@@ -78,8 +78,9 @@ html
         .thinlinesmall
             background-color: #CCC9C9
             height: 6px
-            width: 15%
+            width: 100px
             margin-bottom: 5%
+            margin-top: 5%
 
         h1
             font-size: 30px
@@ -87,31 +88,34 @@ html
             margin-bottom: 5%
 
         p 
-            width: 65%
+            width: 80%
             font-family: 'Ubuntu Condensed', sans-serif
             font-size: 18px
+            text-align: justify
 
         img 
-            width: 100%
+            width: 70%
             height: 100%
 
         #asianbaby
-            width: 60%
+            width: 70%
             height: 100%
 
     .about2
         height: 100%
+        width: 100%
         color: black
         padding-top: 4%
         padding-bottom: 5%
         margin: 0
-        background-color: $bgcinzaclaro
 
         .thinlinesmall
             background-color: #CCC9C9
             height: 6px
-            width: 15%
+            width: 100px
             margin-bottom: 5%
+            margin-top: 5%
+            align-self: right
 
         h1
             font-size: 30px
@@ -122,10 +126,13 @@ html
             width: 100%
             font-family: 'Ubuntu Condensed', sans-serif
             font-size: 18px
+            text-align: justify
 
         img 
-            width: 50%
-            height: 80%
+            width: 70%
+            height: 100%
+            
+            
 
    
             
