--- a/sass/style.sass
+++ b/sass/style.sass
@@ -88,18 +88,21 @@ html
             margin-bottom: 5%
 
         p 
-            width: 80%
+            width: 100%
             font-family: 'Ubuntu Condensed', sans-serif
             font-size: 18px
             text-align: justify
 
         img 
-            width: 70%
+            width: 90%
             height: 100%
+            margin-left: 5%
 
         #asianbaby
-            width: 70%
+            width: 90%
             height: 100%
+            margin-left: 5%
+            
 
     .about2
         height: 100%
@@ -115,22 +118,25 @@ html
             width: 100px
             margin-bottom: 5%
             margin-top: 5%
-            align-self: right
+            margin-left: 2%
 
         h1
             font-size: 30px
             font-family: 'Ubuntu Condensed', sans-serif
             margin-bottom: 5%
+            margin-left: 2%
 
         p 
             width: 100%
             font-family: 'Ubuntu Condensed', sans-serif
             font-size: 18px
             text-align: justify
+            margin-left: 2%
 
         img 
-            width: 70%
+            width: 90%
             height: 100%
+            margin-left: 5%
             
             
 
