Test without JS

--- a/sass/_variable.sass
+++ b/sass/_variable.sass
@@ -1,3 +1,11 @@
 //cores
 $bgcinzaclaro: #F8F8F8
 $letrasazuis: #494f90
+//olhos
+$olhoazul: #006CC3
+$olhocastanho: #66431D
+$olhoverde: #179A3A
+//pele
+$peleclara: #CAACA4
+$pelemorena: #874E42
+$peleescura: #582A24
