--- a/sass/style.sass
+++ b/sass/style.sass
@@ -137,6 +137,157 @@ html
             width: 90%
             height: 100%
             margin-left: 5%
+
+    .test
+        height: 100%
+        width: 100%
+        color: black
+        padding-top: 10%
+        padding-bottom: 10%
+
+        img 
+            border: 1px solid black
+            width: 100%
+
+        #sangue
+            border: 1px solid black
+            width: 20%
+
+        iframe
+            width: 100%
+            height: 450px
+
+//Iframes
+.iframe
+    position: relative
+    height: 100%
+    margin: 0
+
+    h1
+        font-family: 'BebasNeueRegular'
+        font-size: 22px
+        color: black
+        margin-bottom: 5%
+
+    //eyes
+    #features
+        font-family: 'BebasNeueRegular'
+        font-size: 22px
+        color: $letrasazuis
+
+    #eyeblue
+        height: 50px
+        width: 50px
+        background-color: $olhoazul
+        margin-bottom: 5%
+
+    #eyebrown
+        height: 50px
+        width: 50px
+        background-color: $olhocastanho
+        margin-bottom: 5%
+        margin-left: 5%
+
+    #eyegreen
+        height: 50px
+        width: 50px
+        background-color: $olhoverde
+        margin-bottom: 5%
+        margin-left: 5%
+
+    //skin
+    #skinwhite
+        height: 50px
+        width: 50px
+        background-color: $peleclara
+        margin-bottom: 5%
+        margin-left: 5%
+
+    #skinbrunette
+        height: 50px
+        width: 50px
+        background-color: $pelemorena
+        margin-bottom: 5%
+        margin-left: 5%
+
+    #skinblack
+        height: 50px
+        width: 50px
+        background-color: $peleescura
+        margin-bottom: 5%
+        margin-left: 5%  
+
+    //blood
+    #ap
+        height: 50px
+        width: 50px
+        margin-bottom: 5%
+        margin-left: 5%
+        background-image: url('../images/A+.jpg')
+        background-size: cover
+
+    #a-
+        height: 50px
+        width: 50px
+        background-color: $peleescura
+        margin-bottom: 5%
+        margin-left: 5%
+        background-image: url('../images/A-.jpg')
+        background-size: cover
+    
+    #bp
+        height: 50px
+        width: 50px
+        background-color: $peleescura
+        margin-bottom: 5%
+        margin-left: 5%
+        background-image: url('../images/B+.jpg')
+        background-size: cover
+
+    #b-
+        height: 50px
+        width: 50px
+        background-color: $peleescura
+        margin-bottom: 5%
+        margin-left: 5%
+        background-image: url('../images/B-.jpg')
+        background-size: cover 
+
+    #abp
+        height: 50px
+        width: 50px
+        background-color: $peleescura
+        margin-bottom: 5%
+        margin-left: 5%
+        background-image: url('../images/AB+.jpg')
+        background-size: cover 
+
+    #ab-
+        height: 50px
+        width: 50px
+        background-color: $peleescura
+        margin-bottom: 5%
+        margin-left: 5%
+        background-image: url('../images/AB-.jpg')
+        background-size: cover
+
+    #op
+        height: 50px
+        width: 50px
+        background-color: $peleescura
+        margin-bottom: 5%
+        margin-left: 5%
+        background-image: url('../images/O+.jpg')
+        background-size: cover 
+
+    #o-
+        height: 50px
+        width: 50px
+        background-color: $peleescura
+        margin-bottom: 5%
+        margin-left: 5%
+        background-image: url('../images/O-.jpg')
+        background-size: cover 
             
             
 
