--- a/sass/style.css
+++ b/sass/style.css
@@ -175,4 +175,172 @@ html .about2 img {
   height: 100%;
   margin-left: 5%;
 }
+
+html .test {
+  height: 100%;
+  width: 100%;
+  color: black;
+  padding-top: 10%;
+  padding-bottom: 10%;
+}
+
+html .test img {
+  border: 1px solid black;
+  width: 100%;
+}
+
+html .test #sangue {
+  border: 1px solid black;
+  width: 20%;
+}
+
+html .test iframe {
+  width: 100%;
+  height: 450px;
+}
+
+.iframe {
+  position: relative;
+  height: 100%;
+  margin: 0;
+}
+
+.iframe h1 {
+  font-family: 'BebasNeueRegular';
+  font-size: 22px;
+  color: black;
+  margin-bottom: 5%;
+}
+
+.iframe #features {
+  font-family: 'BebasNeueRegular';
+  font-size: 22px;
+  color: #494f90;
+}
+
+.iframe #eyeblue {
+  height: 50px;
+  width: 50px;
+  background-color: #006CC3;
+  margin-bottom: 5%;
+}
+
+.iframe #eyebrown {
+  height: 50px;
+  width: 50px;
+  background-color: #66431D;
+  margin-bottom: 5%;
+  margin-left: 5%;
+}
+
+.iframe #eyegreen {
+  height: 50px;
+  width: 50px;
+  background-color: #179A3A;
+  margin-bottom: 5%;
+  margin-left: 5%;
+}
+
+.iframe #skinwhite {
+  height: 50px;
+  width: 50px;
+  background-color: #CAACA4;
+  margin-bottom: 5%;
+  margin-left: 5%;
+}
+
+.iframe #skinbrunette {
+  height: 50px;
+  width: 50px;
+  background-color: #874E42;
+  margin-bottom: 5%;
+  margin-left: 5%;
+}
+
+.iframe #skinblack {
+  height: 50px;
+  width: 50px;
+  background-color: #582A24;
+  margin-bottom: 5%;
+  margin-left: 5%;
+}
+
+.iframe #ap {
+  height: 50px;
+  width: 50px;
+  margin-bottom: 5%;
+  margin-left: 5%;
+  background-image: url("../images/A+.jpg");
+  background-size: cover;
+}
+
+.iframe #a- {
+  height: 50px;
+  width: 50px;
+  background-color: #582A24;
+  margin-bottom: 5%;
+  margin-left: 5%;
+  background-image: url("../images/A-.jpg");
+  background-size: cover;
+}
+
+.iframe #bp {
+  height: 50px;
+  width: 50px;
+  background-color: #582A24;
+  margin-bottom: 5%;
+  margin-left: 5%;
+  background-image: url("../images/B+.jpg");
+  background-size: cover;
+}
+
+.iframe #b- {
+  height: 50px;
+  width: 50px;
+  background-color: #582A24;
+  margin-bottom: 5%;
+  margin-left: 5%;
+  background-image: url("../images/B-.jpg");
+  background-size: cover;
+}
+
+.iframe #abp {
+  height: 50px;
+  width: 50px;
+  background-color: #582A24;
+  margin-bottom: 5%;
+  margin-left: 5%;
+  background-image: url("../images/AB+.jpg");
+  background-size: cover;
+}
+
+.iframe #ab- {
+  height: 50px;
+  width: 50px;
+  background-color: #582A24;
+  margin-bottom: 5%;
+  margin-left: 5%;
+  background-image: url("../images/AB-.jpg");
+  background-size: cover;
+}
+
+.iframe #op {
+  height: 50px;
+  width: 50px;
+  background-color: #582A24;
+  margin-bottom: 5%;
+  margin-left: 5%;
+  background-image: url("../images/O+.jpg");
+  background-size: cover;
+}
+
+.iframe #o- {
+  height: 50px;
+  width: 50px;
+  background-color: #582A24;
+  margin-bottom: 5%;
+  margin-left: 5%;
+  background-image: url("../images/O-.jpg");
+  background-size: cover;
+}
 /*# sourceMappingURL=style.css.map */
