--- a/sass/style.sass
+++ b/sass/style.sass
@@ -145,14 +145,6 @@ html
         padding-top: 10%
         padding-bottom: 10%
 
-        img 
-            border: 1px solid black
-            width: 100%
-
-        #sangue
-            border: 1px solid black
-            width: 20%
-
         iframe
             width: 100%
             height: 450px
@@ -162,6 +154,14 @@ html
     position: relative
     height: 100%
     margin: 0
+
+    img 
+        border: 1px solid black
+        width: 100%
+
+    #sangue
+        border: 1px solid black
+        width: 20%
 
     h1
         font-family: 'BebasNeueRegular'
@@ -175,20 +175,20 @@ html
         font-size: 22px
         color: $letrasazuis
 
-    #eyeblue
+    #eyeblue, #eyeblue1
         height: 50px
         width: 50px
         background-color: $olhoazul
         margin-bottom: 5%
 
-    #eyebrown
+    #eyebrown, #eyebrown1
         height: 50px
         width: 50px
         background-color: $olhocastanho
         margin-bottom: 5%
         margin-left: 5%
 
-    #eyegreen
+    #eyegreen, #eyegreen1
         height: 50px
         width: 50px
         background-color: $olhoverde
