--- a/sass/style.css
+++ b/sass/style.css
@@ -176,7 +176,7 @@ html .about2 img {
   margin-left: 5%;
 }
 
-html .test {
+.iframe {
   height: 100%;
   width: 100%;
   color: black;
@@ -184,15 +184,13 @@ html .test {
   padding-bottom: 10%;
 }
 
-html .test iframe {
-  width: 100%;
-  height: 450px;
+.iframe #test {
+  margin-bottom: 5%;
 }
 
-.iframe {
-  position: relative;
-  height: 100%;
-  margin: 0;
+.iframe #test2 {
+  margin-top: 20%;
+  margin-bottom: 5%;
 }
 
 .iframe img {
