--- a/sass/style.sass
+++ b/sass/style.sass
@@ -138,22 +138,20 @@ html
             height: 100%
             margin-left: 5%
 
-    .test
-        height: 100%
-        width: 100%
-        color: black
-        padding-top: 10%
-        padding-bottom: 10%
-
-        iframe
-            width: 100%
-            height: 450px
 
 //Iframes
 .iframe
-    position: relative
     height: 100%
-    margin: 0
+    width: 100%
+    color: black
+    padding-top: 10%
+    padding-bottom: 10%
+
+    #test
+        margin-bottom: 5%
+    #test2
+        margin-top: 20%
+        margin-bottom: 5%
 
     img 
         border: 1px solid black
