--- a/sass/style.sass
+++ b/sass/style.sass
@@ -146,20 +146,35 @@ html
     color: black
     padding-top: 10%
     padding-bottom: 10%
+    font-family: 'BebasNeueRegular'
+    font-size: 22px
 
     #test
+        margin-bottom: 2%
+
+    #test2 
+        display: none
+        margin-top: 5%
         margin-bottom: 5%
-    #test2
-        margin-top: 20%
+
+    #test3
+        display: none
+        margin-top: 5%
         margin-bottom: 5%
+        width: 80%
 
     img 
         border: 1px solid black
         width: 100%
 
+    #continue
+        margin-top: 30%
+        margin-left: 15%
+
     #sangue
         border: 1px solid black
-        width: 20%
+        width: 50%
+        margin-left: 10%
 
     h1
         font-family: 'BebasNeueRegular'
@@ -199,7 +214,6 @@ html
         width: 50px
         background-color: $peleclara
         margin-bottom: 5%
-        margin-left: 5%
 
     #skinbrunette
         height: 50px
@@ -220,7 +234,6 @@ html
         height: 50px
         width: 50px
         margin-bottom: 5%
-        margin-left: 5%
         background-image: url('../images/A+.jpg')
         background-size: cover
 
@@ -285,7 +298,8 @@ html
         margin-bottom: 5%
         margin-left: 5%
         background-image: url('../images/O-.jpg')
-        background-size: cover 
+        background-size: cover
+ 
             
             
 
