--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,6 +4,7 @@ html
     position: relative
     height: 100%
     margin: 0
+    cursor: default
 
     hr
         margin: 0
@@ -113,7 +114,7 @@ html
         margin: 0
 
         .thinlinesmall
-            background-color: #CCC9C9
+            background-color: $cinzaescuro
             height: 6px
             width: 100px
             margin-bottom: 5%
@@ -140,12 +141,12 @@ html
 
 
 //Iframes
-.iframe
+.testgene
     height: 100%
     width: 100%
     color: black
     padding-top: 10%
-    padding-bottom: 10%
+    padding-bottom: 5%
     font-family: 'BebasNeueRegular'
     font-size: 22px
 
@@ -172,7 +173,6 @@ html
         margin-left: 15%
 
     #sangue
-        border: 1px solid black
         width: 50%
         margin-left: 10%
 
@@ -240,7 +240,6 @@ html
     #a-
         height: 50px
         width: 50px
-        background-color: $peleescura
         margin-bottom: 5%
         margin-left: 5%
         background-image: url('../images/A-.jpg')
@@ -249,7 +248,6 @@ html
     #bp
         height: 50px
         width: 50px
-        background-color: $peleescura
         margin-bottom: 5%
         margin-left: 5%
         background-image: url('../images/B+.jpg')
@@ -258,7 +256,6 @@ html
     #b-
         height: 50px
         width: 50px
-        background-color: $peleescura
         margin-bottom: 5%
         margin-left: 5%
         background-image: url('../images/B-.jpg')
@@ -267,7 +264,6 @@ html
     #abp
         height: 50px
         width: 50px
-        background-color: $peleescura
         margin-bottom: 5%
         margin-left: 5%
         background-image: url('../images/AB+.jpg')
@@ -276,7 +272,6 @@ html
     #ab-
         height: 50px
         width: 50px
-        background-color: $peleescura
         margin-bottom: 5%
         margin-left: 5%
         background-image: url('../images/AB-.jpg')
@@ -285,7 +280,6 @@ html
     #op
         height: 50px
         width: 50px
-        background-color: $peleescura
         margin-bottom: 5%
         margin-left: 5%
         background-image: url('../images/O+.jpg')
@@ -294,16 +288,36 @@ html
     #o-
         height: 50px
         width: 50px
-        background-color: $peleescura
         margin-bottom: 5%
         margin-left: 5%
         background-image: url('../images/O-.jpg')
         background-size: cover
  
-            
-            
+.footer
+    background-color: $bgcinzaclaro
+    height: 100%
+    font-family: 'Ubuntu Condensed', sans-serif
 
-   
-            
-            
-                    
+    #linkf
+        margin-top: 10%
+        padding: 10% 
+
+        a 
+            margin: 5%
+            align-items: left
+            font-size: 20px
+
+        a:link 
+            color: $letrasazuis
+        a:activate
+            color: $letrasazuis
+        a:visited
+            color: $letrasazuis
+        a:hover
+            color: #000000
+            text-decoration: none 
+
+        p 
+            font-size: 12px
+            margin: 5%
+            color: #CCC9C9                 
